Week 3 login finalised

--- a/week3/package.json
+++ b/week3/package.json
@@ -9,6 +9,9 @@
   "author": "Harley Jarrett",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.1",
+    "express": "^4.16.3",
+    "jquery": "^3.3.1"
   }
 }
