--- a/assignment1/assignment/package.json
+++ b/assignment1/assignment/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.5.4",
     "mongodb": "^3.1.3",
     "rxjs": "^6.0.0",
+    "socket.io": "^2.1.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
