--- a/assignment1/mongo-server/package.json
+++ b/assignment1/mongo-server/package.json
@@ -13,10 +13,12 @@
     "babel-preset-es2015-node6": "^0.4.0",
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.2.8",
     "morgan": "^1.9.0",
     "nodemon": "^1.18.3",
+    "socket.io": "^2.1.1",
     "source-map-support": "^0.5.8"
   }
 }
