--- a/assignment1/mongo-server/package.json
+++ b/assignment1/mongo-server/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "babel-preset-es2015-node6": "^0.4.0",
     "babel-register": "^6.26.0",
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "jsonfile": "^4.0.0",
     "mongoose": "^5.2.8",
     "morgan": "^1.9.0",
     "nodemon": "^1.18.3",
