--- a/assignment1/mongo-server/package.json
+++ b/assignment1/mongo-server/package.json
@@ -4,7 +4,7 @@
   "description": "api for mongo calls",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./tests/test.js",
     "start": "nodemon app_hooked.js"
   },
   "author": "",
@@ -15,11 +15,13 @@
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "bufferjs": "^3.0.1",
+    "chai-http": "^4.2.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "formidable": "^1.2.1",
     "jsonfile": "^4.0.0",
+    "mocha": "^5.2.0",
     "mongoose": "^5.2.8",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
